# Burning_Register

./: .gitignore  Dockerfile  Home.py  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  test.py
.github/workflows/: build-publish.yml
pages/: 1_🛒_Kasse.py  2_🪙_Finanzen.py  3_📦_Inventar.py  4_⚙️_Admin.py  5_🎫_Freitickets.py
src/burningbackend/: __main__.py
src/burningbackend/app/: main.py
src/burningbackend/app/api/: __init__.py  docs.py
src/burningbackend/app/api/v1/: __init__.py
src/burningbackend/app/api/v1/endpoints/: history.py  inventory.py  movies.py
src/burningbackend/app/core/: config.py  enums.py  security.py
src/burningbackend/app/db/: init_db.py
src/burningbackend/app/models/: __init__.py  history.py  inventory.py  movie.py  user.py
utilities/: database.py  init_db.py  modules.py
