[tool.poetry]
name = "burningbackend"
version = "0.0.1"
description = ""
authors = ["Lukas Holzner <git@lukas.lhal.de>"]
license = "GNU General Public License v3.0"
readme = "README.md"
packages = [{include = "burningbackend", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.103.0"
pydantic = {extras = ["email"], version = "^2.3.0"}
uvicorn = "^0.23.2"
pydantic-settings = "^2.0.3"
beanie = "^1.21.0"
passlib = "^1.7.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
